# Orbis-Engine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multiple-platform.yml  cmake-single-platform.yml
Libraries/include/glad/: glad.h
res/Shaders/: default.vert
src/: glad.c  main.cpp
src/Shader/: EBO.cpp  EBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  shaderClass.cpp  shaderClass.h
